fixed spacing

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -89,8 +89,11 @@
         margin-bottom: 2rem;
     }
     .early-access-card {
-        top: 40px;
+        top: 20px;
         width: 90%;
+    }
+    .early-access-title {
+        max-width: 100%;
     }
     .email {
         margin-bottom: 1rem;
